<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sgd.tjlb.zhxf.ui.activity.login.PasswordForgetAfterActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/password_reset_title"
        app:titleSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_phone_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/text_update_pwd_phonenum"
        android:textColor="@color/black33333"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_frame_gray_1dp_white_radius_4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/text_update_pwd_oldloginpwd"
            android:textColor="@color/black33333"
            android:textSize="@dimen/sp_14" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_password_reset_oldpwd"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/common_password_input_error"
            android:maxLength="18"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_18"
            android:singleLine="true"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_frame_gray_1dp_white_radius_4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/text_update_pwd_newloginpwd"
            android:textColor="@color/black33333"
            android:textSize="@dimen/sp_14" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_password_reset_password1"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_reset_phone_new_pwd_hint"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_18"
            android:singleLine="true"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_frame_gray_1dp_white_radius_4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/text_update_pwd_newpwdconfirm"
            android:textColor="@color/black33333"
            android:textSize="@dimen/sp_14" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_password_reset_password2"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_reset_phone_hint2"
            android:imeOptions="actionDone"
            android:maxLength="18"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_18"
            android:singleLine="true"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_password_reset_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_30"
        android:text="@string/common_step_complete" />

</LinearLayout>