<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_F8F8F8F8"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/text_tip_add_bank_no"
        app:titleSize="@dimen/sp_16" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_frame_gray_1dp_white_radius_4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:text="@string/text_tip_produce_bankname_dot"
                    android:textColor="@color/black33333"
                    android:textSize="@dimen/sp_14" />

                <com.hjq.widget.view.ClearEditText
                    android:id="@+id/et_applyforbank_bank"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_tip_produce_bank"
                    android:paddingHorizontal="@dimen/dp_20"
                    android:paddingVertical="@dimen/dp_18"
                    android:singleLine="true"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_frame_gray_1dp_white_radius_4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:text="@string/text_tip_bank_open_account_dot"
                    android:textColor="@color/black33333"
                    android:textSize="@dimen/sp_14" />

                <com.hjq.widget.view.ClearEditText
                    android:id="@+id/et_applyforbank_open_account_name"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_tip_open_account_name"
                    android:paddingHorizontal="@dimen/dp_20"
                    android:paddingVertical="@dimen/dp_18"
                    android:singleLine="true"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_frame_gray_1dp_white_radius_4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:text="@string/text_tip_produce_cardnumber"
                    android:textColor="@color/black33333"
                    android:textSize="@dimen/sp_14" />

                <com.hjq.widget.view.ClearEditText
                    android:id="@+id/et_applyforbank_cardnumber"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_tip_produce_cardnumber"
                    android:inputType="number"
                    android:maxLength="18"
                    android:paddingHorizontal="@dimen/dp_20"
                    android:paddingVertical="@dimen/dp_18"
                    android:singleLine="true"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_frame_gray_1dp_white_radius_4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:text="@string/text_tip_bank_open_account_address_dot"
                    android:textColor="@color/black33333"
                    android:textSize="@dimen/sp_14" />

                <com.hjq.widget.view.ClearEditText
                    android:id="@+id/et_applyforbank_open_account_address"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_tip_open_account_bank_address_name"
                    android:maxLength="11"
                    android:paddingHorizontal="@dimen/dp_20"
                    android:paddingVertical="@dimen/dp_18"
                    android:singleLine="true"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_applyforbank_apply"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:layout_marginVertical="@dimen/dp_30"
                android:text="@string/common_confirm" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>