<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_10"
    android:layout_marginVertical="@dimen/dp_5"
    android:background="@drawable/bg_white_radius_4dp"
    android:paddingVertical="@dimen/dp_10">

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:text="@string/text_myconstructionorder_havecomplete"
        android:textColor="@color/black33333"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_construction_record_workrecord"
        app:layout_constraintTop_toTopOf="@id/tv_item_construction_record_workrecord" />

    <TextView
        android:id="@+id/tv_item_construction_record_workrecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:background="@drawable/bg_blue_radius_4dp"
        android:paddingHorizontal="@dimen/dp_10"
        android:paddingVertical="@dimen/dp_5"
        android:text="@string/text_myconstructionorder_workrecord"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/black5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_construction_record_workrecord" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/text_myconstructionorder_time"
        android:textColor="@color/black33333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_1" />

    <TextView
        android:id="@+id/tv_item_construction_record_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/tip_time"
        android:textColor="@color/black33333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/tv_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_2"
        app:layout_constraintTop_toTopOf="@id/tv_2" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/text_myconstructionorder_storename"
        android:textColor="@color/black33333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_2" />

    <TextView
        android:id="@+id/tv_item_construction_record_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/common_storename"
        android:textColor="@color/black33333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/tv_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_3"
        app:layout_constraintTop_toTopOf="@id/tv_3" />

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/text_myconstructionorder_address"
        android:textColor="@color/black33333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_3" />

    <TextView
        android:id="@+id/tv_item_construction_record_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/common_storetext_address"
        android:textColor="@color/black33333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/tv_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_4"
        app:layout_constraintTop_toTopOf="@id/tv_4" />


</androidx.constraintlayout.widget.ConstraintLayout>