<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_F8F8F8F8"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/title_update_usermame"
        app:titleSize="@dimen/sp_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_frame_gray_1dp_white_radius_4dp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_data_name"
            android:textColor="@color/black33333"
            android:textSize="@dimen/sp_14" />

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/et_updateupdate_user_name_username"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:maxLength="11"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_18"
            android:singleLine="true"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <com.hjq.widget.view.SubmitButton
        android:id="@+id/btn_update_user_name_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_30"
        android:text="@string/common_step_commit" />

</LinearLayout>